--- a/assets/style.css
+++ b/assets/style.css
@@ -5,15 +5,17 @@
 }
 
 body{
-    background: #171717;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: #1B2838;
     color: #fff;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 main{
     margin: 5% auto;
-    background-color: #333;
-    width: 300px;
+    box-shadow: rgba(10, 50, 50, 0.40) 0px 2px 8px 0px, 
+    0px 0px 20px 0px rgba(10, 30, 30, 0.40),
+     0px 0px 20px 0px rgba(0, 10, 10, 0.40);
+    width: 350px;
     height: 250px;
     border-radius: 12px;
 }
@@ -104,9 +106,25 @@ button{
 
 footer{
     text-align: center;
+    box-shadow: rgba(10, 50, 50, 0.40) 0px 2px 8px 0px, 
+    0px 0px 20px 0px rgba(10, 30, 30, 0.40),
+     0px 0px 20px 0px rgba(0, 10, 10, 0.40);
+    width: 300px;
+    height: 70px;
+    margin: 0 auto;
+    border-bottom: 2px solid rgb(48, 171, 195);
+    border-radius: 4px;
 }
 
-a{
+footer > p{
+    padding-top: 0.5rem;
+}
+
+footer > a{
     text-decoration: none;
     color: rgb(0, 179, 255);
+}
+
+footer > a:hover{
+    border-bottom: 1px solid rgb(48, 171, 195);
 }
